--- a/#source/scss/nullstyle.scss
+++ b/#source/scss/nullstyle.scss
@@ -20,6 +20,7 @@ $maxWidthContainer: 1170; //
    } @else {
       // всегда
       #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+      // ( свойство ,начальное макетное значение,минимальное значение свойства, режим)
    }
 }
 
