--- a/#source/scss/styles.scss
+++ b/#source/scss/styles.scss
@@ -8,8 +8,8 @@ html {
 // Переменные для блока
 $fz: 100px;
 $color_1: #10b6fe;
-$color_2: #fff;
-$color_3: #fe10d6;
+$color_2: rgb(94, 67, 248);
+$color_3: #525e69;
 $color_cer: #b4b4b4;
 
 .container {
