--- a/#source/assets/css/styles.css
+++ b/#source/assets/css/styles.css
@@ -175,7 +175,7 @@ a.no-after:after {
   padding: 100px 10px;
 }
 
-.t-c {
+.text-c {
   text-align: center !important;
 }
 
@@ -1089,9 +1089,10 @@ ul.products li.product:hover {
   padding: 5px 20px 13px 20px;
   border-radius: 10px;
   background: #fff;
-  background: -o-linear-gradient(#fff 90%, #5e43f8 50%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(90%, #fff), color-stop(50%, #5e43f8));
-  background: linear-gradient(#fff 90%, #5e43f8 50%);
+  background: -o-linear-gradient(to right, #fff 50%, #5e43f8 50%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #fff), color-stop(50%, #5e43f8));
+  background: -o-linear-gradient(left, #fff 50%, #5e43f8 50%);
+  background: linear-gradient(to right, #fff 50%, #5e43f8 50%);
 }
 .modalDialog > .wplb_holder p {
   text-align: justify;
