--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -21,8 +21,11 @@
 .current-menu-item>a {
    color: red;
 }
-
-
+*/
+/*
+.ast-primary-header-bar {
+   background: rgba(0, 0, 0, 0) url("./transparent.png") repeat scroll 0% 0%;
+}
 */
 .ast-site-identity {
    padding: 0;
