--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,7 +104,7 @@ h6 {
 
 /*--------------------*/
 .block__container {
-  max-width: 1600px;
+  max-width: 1920px;
   padding: 0px 15px;
   margin: 0px auto;
 }
@@ -126,12 +126,12 @@ h6 {
 
 @media (max-width: 1600px) {
   .block__body {
-    padding: calc(20px + (50-20) * ((100vw -320px) / (1600 - 320)));
+    padding: calc(20px + 30 * (100vw - 320px) / 1280);
   }
 
   .block__title {
-    padding: calc(20px + (30-20) * ((100vw -320px) / (1600 - 320)));
-    margin-bottom: calc(20px + (50-20) * ((100vw -320px) / (1600 - 320)));
+    padding: calc(20px + 10 * (100vw - 320px) / 1280);
+    margin-bottom: calc(20px + 30 * (100vw - 320px) / 1280);
   }
 }
 /*
@@ -139,10 +139,73 @@ html {
     font-size: calc(0.6em + 0.6vw)
 }
 */
+[class*=__container] {
+  max-width: 1087px;
+  margin: 0 auto;
+  padding: 0px 15px;
+}
+
+.wrapper {
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
 .container {
   max-width: 1600px;
   margin: 0px auto;
   padding: 0px 10px;
+}
+
+/*
+.class:not(:last-child) {  // для класса только если обьект не последний
+   margin: 0px 0px 12px 0px;
+} 
+*/
+.experts__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.expert__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+.expert__video {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+  padding: 0px 0px 28% 0px;
+  position: relative;
+  -webkit-box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+          box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.expert__video iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /*2 цвета */
@@ -189,7 +252,7 @@ a.no-after:after {
 
 /*** a стили с плавным подчеркиванием ссылки***/
 /*
-a {
+a {   
    display: inline-block;
    color: #ffeb3b;
    line-height: 1;
@@ -325,7 +388,7 @@ h6 {
 
 /*--------------------*/
 .block__container {
-  max-width: 1600px;
+  max-width: 1920px;
   padding: 0px 15px;
   margin: 0px auto;
 }
@@ -347,18 +410,18 @@ h6 {
 
 @media (max-width: 1600px) {
   .block__body {
-    padding: calc(20px + (50-20) * ((100vw -320px) / (1600 - 320)));
+    padding: calc(20px + 30 * (100vw - 320px) / 1280);
   }
 
   .block__title {
-    padding: calc(20px + (30-20) * ((100vw -320px) / (1600 - 320)));
-    margin-bottom: calc(20px + (50-20) * ((100vw -320px) / (1600 - 320)));
+    padding: calc(20px + 10 * (100vw - 320px) / 1280);
+    margin-bottom: calc(20px + 30 * (100vw - 320px) / 1280);
   }
 }
 /* header */
 .main-navigation .menu-item-has-children > a::after,
 .main-navigation .page_item_has_children > a::after {
-  content: "";
+  content: "\e900";
   display: inline-block;
   font-family: Astra;
   font-size: 9px;
@@ -376,8 +439,11 @@ h6 {
 .current-menu-item>a {
    color: red;
 }
-
-
+*/
+/*
+.ast-primary-header-bar {
+   background: rgba(0, 0, 0, 0) url("./transparent.png") repeat scroll 0% 0%;
+}
 */
 .ast-site-identity {
   padding: 0;
@@ -1097,9 +1163,9 @@ ul.products li.product:hover {
   padding: 5px 20px 13px 20px;
   border-radius: 10px;
   background: #fff;
-  background: -o-linear-gradient(#fff 90%, #5e43f8 50%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(90%, #fff), color-stop(50%, #5e43f8));
-  background: linear-gradient(#fff 90%, #5e43f8 50%);
+  background: -o-linear-gradient(#fff 90%, rgb(94, 67, 248) 50%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(90%, #fff), color-stop(50%, rgb(94, 67, 248)));
+  background: linear-gradient(#fff 90%, rgb(94, 67, 248) 50%);
 }
 .modalDialog > .wplb_holder p {
   text-align: justify;
@@ -1166,7 +1232,7 @@ ul.products li.product:hover {
   font-weight: bold;
   background-color: #10b6fe;
   cursor: pointer;
-  border: 3px #d9d9d9 solid;
+  border: 3px rgb(217, 217, 217) solid;
   border-radius: 5px;
   width: 100%;
 }
@@ -1263,7 +1329,7 @@ ul.products li.product:hover {
   margin-bottom: 1rem;
   border-radius: 0.25rem;
   color: #dc3545;
-  background-color: #dc35450d;
+  background-color: rgba(220, 53, 69, 0.0509803922);
   border: 1px solid #dc3545;
 }
 
